<resources>
    <string name="app_name">Mshwar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
      completions."
  </string>
    <string name="menu_start_trip">New Trip</string>
    <string name="menu_sync">Sync</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="resend_verification_email">Resend Verification Email</string>
    <string name="add_note">Add Note</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="tabian_consulting_logo">Tabian Consulting Logo</string>
    <string name="email_registration">Email Registration</string>
    <string name="email">Email</string>
    <string name="note_name"> Note Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="employee_dashboard">Employee Dashboard</string>
    <string name="this_week_s_initiatives">This week\'s initiatives</string>
    <string name="employee_schedule">Employee Schedule</string>
    <string name="company_culture">Company Culture</string>
    <string name="tabian_consulting_sales_chart">Tabian Consulting Sales Chart</string>
    <string name="cancel">CANCEL</string>
    <string name="confirm">CONFIRM</string>
    <string name="reset_password">Reset Password</string>
    <string name="sign_out">Sign out</string>
    <string name="account_settings">Account Settings</string>
    <string name="current_password">Confirm current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="Create_Trip">Create_Trip</string>
    <string name="tripName">trip</string>
    <string name="startpoint">startpoint</string>
    <string name="StartPoint">Start point</string>
    <string name="endpoint">End point</string>
    <string name="Tripname">Trip name</string>
    <string name="addaNewTrip">Add a new TRIP</string>
    <string name="add_trip">Add Trip</string>
    <string name="Type_trip">Type of trip</string>
    <string name="Repetition">Repetition</string>
    <string name="time">00:00 AM</string>


    <string name="Time">Time</string>
    <string name="Date">Date</string>
    <string name="Add">Add</string>
    <string name="Cancel">Cancel</string>
    <string name="date">m/dd/yyyy</string>
    <string name="description">Description</string>
    <string name="add_trip_error_message">PLease add more details to your trip</string>
    <string name="str_all_trips">All Trips</string>
    <string name="str_trips_all">All Trips</string>
    <string name="str_trips_cancelled">Cancelled</string>
    <string name="str_trips_done">Done</string>
    <string name="str_trips_upcoming">Upcoming</string>
    <string name="str_navigation_user">User Area</string>
    <string name="str_user_settings">User Settings</string>
    <string name="str_user_logout">Logout</string>
    <string name="create_floating_widget">Create Floating Widget</string>
    <string name="floating_widget_label">Floating Widget Label</string>
    <string name="floating_widget_details">Floating Widget Details</string>
    <string name="draw_other_app_permission_denied">Draw over other app permission not available. App won\'t work without permission. Please try again.</string>
    <string name="str_home">Home</string>
    <string name="str_trips_past">Past</string>

    <string name="title_activity_history">Trips</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_home">Upcoming Trips</string>
    <string name="prompt_username">Your Name</string>
    <string name="str_help">Help</string>
    <string name="card_notes">Notes</string>
    <string name="card_delete">Delete</string>
    <string name="add_note_hint">Add Note</string>
    <string name="add_more_trips">Opps! No trips here. Start by adding(+) more trips.</string>
    <string name="todo">TODO</string>
    <string name="meet_the_makers">Meet the Makers!</string>
    <string name="title_activity_team">About us</string>
    <string name="str_about_us">About Us</string>
    <string name="prompt_first_name">Your name</string>

    <string-array name="typeoftrip">
        <item>One Direction</item>
        <item>Round Trip</item>
    </string-array>

    <string-array name="repetition">
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
    </string-array>

</resources>
