<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/nav_done"
            android:title="@string/str_home" />
        <item
            android:id="@+id/nav_trips_all"
            android:icon="@drawable/nav_all"
            android:title="@string/str_trips_all" />

        <item
            android:id="@+id/nav_help"
            android:icon="@android:drawable/ic_dialog_info"
            android:title="@string/str_help" />

        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/ic_about_us"
            android:title="@string/str_about_us" />
    </group>

    <item android:title="@string/str_navigation_user">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/settings"
                android:title="@string/str_user_settings" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/logout"
                android:title="@string/str_user_logout" />
        </menu>
    </item>

</menu>
