

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.TripActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/TripId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:text="@string/add_trip"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingTop="30dp"
        android:text="@string/Tripname" />

    <EditText
        android:id="@+id/TripNameId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName">

        <requestFocus />
    </EditText>

    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/StartPoint" />

    <EditText
        android:id="@+id/startpointId"
        android:layout_width="377dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="none" />

    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/endpoint" />

    <EditText
        android:id="@+id/endpoint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="none" />

    <TextView


        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Type_trip" />

    <Spinner
        android:id="@+id/typeoftrip"
        android:layout_width="381dp"
        android:layout_height="40dp"
        android:layout_marginLeft="32dp"
        android:entries="@array/typeoftrip"
        android:inputType="text"

        />

    <TextView


        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Repetition" />

    <Spinner
        android:id="@+id/repetitionid"
        android:layout_width="381dp"
        android:layout_height="40dp"
        android:layout_marginLeft="32dp"
        android:entries="@array/repetition"
        android:inputType="text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginLeft="8dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingRight="32dp"
            android:weightSum="1"

            >

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Time" />

            <TextView
                android:id="@+id/TimeId"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/textview_border"
                android:paddingTop="8dp"
                android:text="@string/time"
                android:textAlignment="center"
                android:textColor="@color/Black"
                android:textSize="16sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="32dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:weightSum="1">

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Date" />


            <TextView
                android:id="@+id/dateId"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/textview_border"
                android:paddingTop="8dp"
                android:text="@string/date"
                android:textAlignment="center"
                android:textColor="@color/Black"
                android:textSize="16sp"


                />
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:addStatesFromChildren="true"
        android:orientation="horizontal"
        android:paddingTop="16dp"
        android:weightSum="2">


        <Button
            android:id="@+id/addBtn"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:background="@drawable/button_border"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/Add" />


        <Button
            android:id="@+id/CancelBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:background="@drawable/button_border"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/Cancel" />
    </LinearLayout>

    </LinearLayout>
</ScrollView>
