<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

    <android.support.constraint.ConstraintLayout
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/logo" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textAlignment="center" />


            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/password"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textAlignment="center" />

            <Button
                android:id="@+id/sign_in_button_with_email"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/rounded_button"
                android:paddingLeft="35sp"
                android:paddingRight="35sp"
                android:text="@string/sign_in"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold" />


            <com.google.android.gms.common.SignInButton
                android:id="@+id/sign_in_button_with_gmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"/>


            <RelativeLayout
                android:id="@+id/relLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <TextView
                    android:id="@+id/link_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:text="@string/register"
                    android:textColor="@color/linkBlue"
                    android:textSize="16sp" />


                <TextView
                    android:id="@+id/forgot_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/link_register"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:text="@string/forgot_password"
                    android:textColor="@color/linkBlue"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/resend_verification_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/forgot_password"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:text="@string/resend_verification_email"
                    android:textColor="@color/linkBlue"
                    android:textSize="16sp" />

            </RelativeLayout>

        </LinearLayout>

    </android.support.constraint.ConstraintLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="150sp"
        android:layout_height="150sp"
        android:layout_alignBottom="@+id/login_form"
        android:layout_centerInParent="true"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="278dp"
        android:visibility="invisible" />

</RelativeLayout>