<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".activity.EditTripActivity">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar_main"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </android.support.design.widget.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="20dp">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="30dp"
                android:text="@string/Tripname"
                android:textAlignment="textStart" />

            <EditText
                android:id="@+id/editTxt_trip_name_EditActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName">

                <requestFocus />
            </EditText>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/StartPoint"
                android:textAlignment="textStart" />

            <fragment
                android:id="@+id/editTxt_start_point_EditActivity"
                android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginBottom="20dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/endpoint"
                android:textAlignment="textStart" />

            <fragment
                android:id="@+id/editTxt_end_point_EditActivity"
                android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_marginBottom="20dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Type_trip"
                android:textAlignment="textStart" />

            <Spinner
                android:id="@+id/spinner_type_trip_EditActivity"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:ellipsize="marquee"
                android:entries="@array/typeoftrip"
                android:inputType="text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Repetition"
                android:textAlignment="textStart" />

            <Spinner
                android:id="@+id/spinner_trip_repetition_EditActivity"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:ellipsize="marquee"
                android:entries="@array/repetition"
                android:inputType="text" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_marginLeft="8dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingRight="32dp"
                    android:weightSum="1">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Time" />

                    <TextView
                        android:id="@+id/txtView_time_EditActivity"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/textview_border"
                        android:paddingTop="8dp"
                        android:text="@string/time"
                        android:textAlignment="center"
                        android:textColor="@color/Black"
                        android:textSize="16sp" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="32dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingLeft="16dp"
                    android:weightSum="1">

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Date" />


                    <TextView
                        android:id="@+id/txtView_date_EditActivity"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/textview_border"
                        android:paddingTop="8dp"
                        android:text="@string/date"
                        android:textAlignment="center"
                        android:textColor="@color/Black"
                        android:textSize="16sp"


                        />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/round_trip_layout_EditActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_marginLeft="8dp"
                android:orientation="horizontal"
                android:visibility="gone"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingRight="32dp"
                    android:weightSum="1">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Time" />

                    <TextView
                        android:id="@+id/txtView_time2_EditActivity"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/textview_border"
                        android:paddingTop="8dp"
                        android:text="@string/time"
                        android:textAlignment="center"
                        android:textColor="@color/Black"
                        android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="32dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingLeft="16dp"
                    android:weightSum="1">

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Date" />


                    <TextView
                        android:id="@+id/txtView_date2_EditActivity"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/textview_border"
                        android:paddingTop="8dp"
                        android:text="@string/date"
                        android:textAlignment="center"
                        android:textColor="@color/Black"
                        android:textSize="16sp"
                        />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="16dp">

                    <EditText
                        android:id="@+id/textView_add_note_EditActivity"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <ImageView
                        android:id="@+id/image_add_note_EditActivity"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:tint="@color/colorPrimary"
                        app:srcCompat="@drawable/note" />

                </LinearLayout>


                <ListView
                    android:id="@+id/list_view_notes_EditActivity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="true"/>
            </LinearLayout>

            <Button
                android:id="@+id/btn_save_changes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/rounded_button"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/Add"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />


        </LinearLayout>

    </LinearLayout>
</ScrollView>